--- a/Roadmap_CSS1.css
+++ b/Roadmap_CSS1.css
@@ -99,3 +99,14 @@ table{
   }
 </style>
 -->
+
+<style>
+.mycontainer {
+  width:100%;
+  overflow:auto;
+}
+.mycontainer div {
+  width:33%;
+  float:left;
+}
+</style>
